Saner defaults on small screens, layout fixes
I've disabled the transitions for now, since it means that the layout
algorithm runs when the transition is in-progress.  This breaks a couple
of things, and results in very strange-looking boxes and such.  So, for
now, I've commented out the CSS and left a TODO for myself.

--- a/src/css/keep.css
+++ b/src/css/keep.css
@@ -6,11 +6,17 @@
     position: absolute;
     width: 200px;
 
-	-webkit-transition: all 0.6s ease-in-out;
-	-moz-transition: all 0.6s ease-in-out;
-	-o-transition: all 0.6s ease-in-out;
-	-ms-transition: all 0.6s ease-in-out;
-	transition: all 0.6s ease-in-out;
+    /* TODO: enable these when I figure out how to do the laying-out
+     *       with the post-transition size.  As it is, the transition
+     *       being in progress when the laying out is being done can
+     *       and will cause major problems :-(
+     *
+	 * -webkit-transition: all 0.6s ease-in-out;
+	 * -moz-transition: all 0.6s ease-in-out;
+	 * -o-transition: all 0.6s ease-in-out;
+	 * -ms-transition: all 0.6s ease-in-out;
+	 * transition: all 0.6s ease-in-out;
+     */
 }
 
 /* Disable Bootstrap's padding in panels in our item list, since it interferes
@@ -18,4 +24,11 @@
  */
 .item > .panel {
     margin-bottom: 0px;
+}
+
+/* Word-wrap all note bodies.
+ */
+.note-body {
+    overflow: auto;
+    word-wrap: break-word;
 }
